<?xml version="1.0" encoding="utf-8"?>

<!--Fragmento de la sesión "Negocios"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dee4ee"
    android:orientation="vertical"
    android:padding="@dimen/espacio_norma_1">

    <!--Cajas de texto-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/tag_title"
        android:ems="10"
        android:id="@+id/titu_nego" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/desc_nego"
        android:text="@string/tag_desc"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orga_nego"
        android:layout_gravity="center_horizontal"
        android:text="@string/tag_company"
        android:inputType="textPersonName|text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/tag_person"
        android:ems="10"
        android:id="@+id/pers_nego"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/valo_nego"
        android:text="@string/tag_price" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/fech_nego"
        android:layout_gravity="center_horizontal"
        android:text="@string/tag_close_date" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/esta_nego"
        android:layout_gravity="center_horizontal"
        android:text="@string/tag_state"
        android:inputType="text" />

    <!--Botón para agregar-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_add_business"
        android:id="@+id/botn_nego"
        android:layout_gravity="center_horizontal" />
</LinearLayout>