<?xml version="1.0" encoding="utf-8"?>

<!--Fragmento de la sesión "Organizaciones"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dee4ee"
    android:orientation="vertical"
    android:padding="@dimen/espacio_norma_1">

    <!--Cajas de texto-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/tag_name"
        android:ems="10"
        android:id="@+id/nomb_orga" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/direc_orga"
        android:layout_gravity="center_horizontal"
        android:text="@string/tag_addrs" />


    <!--Botón para agregar-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/tele_orga"
        android:text="@string/tag_phone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_add_company"
        android:id="@+id/botn_orga"
        android:layout_gravity="center_horizontal" />
</LinearLayout>